# HelloPyO3

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/hello_pyo3/: main.py
